--- a/Refactored_Py_DS_ML_Bootcamp-master/04-Pandas-Exercises/03-Ecommerce Purchases Exercise .ipynb
+++ b/Refactored_Py_DS_ML_Bootcamp-master/04-Pandas-Exercises/03-Ecommerce Purchases Exercise .ipynb
@@ -21,21 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ecom = pd.read_csv(\"Ecommerce Purchases\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,15 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -209,12 +221,14 @@
        "4     24.140.33.94       es           77.82  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,10 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -237,26 +249,30 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10000 entries, 0 to 9999\n",
       "Data columns (total 14 columns):\n",
-      "Address             10000 non-null object\n",
-      "Lot                 10000 non-null object\n",
-      "AM or PM            10000 non-null object\n",
-      "Browser Info        10000 non-null object\n",
-      "Company             10000 non-null object\n",
-      "Credit Card         10000 non-null int64\n",
-      "CC Exp Date         10000 non-null object\n",
-      "CC Security Code    10000 non-null int64\n",
-      "CC Provider         10000 non-null object\n",
-      "Email               10000 non-null object\n",
-      "Job                 10000 non-null object\n",
-      "IP Address          10000 non-null object\n",
-      "Language            10000 non-null object\n",
-      "Purchase Price      10000 non-null float64\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Address           10000 non-null  object \n",
+      " 1   Lot               10000 non-null  object \n",
+      " 2   AM or PM          10000 non-null  object \n",
+      " 3   Browser Info      10000 non-null  object \n",
+      " 4   Company           10000 non-null  object \n",
+      " 5   Credit Card       10000 non-null  int64  \n",
+      " 6   CC Exp Date       10000 non-null  object \n",
+      " 7   CC Security Code  10000 non-null  int64  \n",
+      " 8   CC Provider       10000 non-null  object \n",
+      " 9   Email             10000 non-null  object \n",
+      " 10  Job               10000 non-null  object \n",
+      " 11  IP Address        10000 non-null  object \n",
+      " 12  Language          10000 non-null  object \n",
+      " 13  Purchase Price    10000 non-null  float64\n",
       "dtypes: float64(1), int64(2), object(11)\n",
       "memory usage: 1.1+ MB\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "ecom.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,10 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -278,12 +292,14 @@
        "50.34730200000025"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Purchase Price'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,30 +310,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "99.989999999999995"
+       "99.99"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Purchase Price'].max()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -325,12 +339,14 @@
        "0.0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Purchase Price'].min()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -341,37 +357,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Address             1098\n",
-       "Lot                 1098\n",
-       "AM or PM            1098\n",
-       "Browser Info        1098\n",
-       "Company             1098\n",
-       "Credit Card         1098\n",
-       "CC Exp Date         1098\n",
-       "CC Security Code    1098\n",
-       "CC Provider         1098\n",
-       "Email               1098\n",
-       "Job                 1098\n",
-       "IP Address          1098\n",
-       "Language            1098\n",
-       "Purchase Price      1098\n",
-       "dtype: int64"
+       "1098"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "(ecom['Language'] == 'en').sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -382,38 +384,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 30 entries, 470 to 9979\n",
-      "Data columns (total 14 columns):\n",
-      "Address             30 non-null object\n",
-      "Lot                 30 non-null object\n",
-      "AM or PM            30 non-null object\n",
-      "Browser Info        30 non-null object\n",
-      "Company             30 non-null object\n",
-      "Credit Card         30 non-null int64\n",
-      "CC Exp Date         30 non-null object\n",
-      "CC Security Code    30 non-null int64\n",
-      "CC Provider         30 non-null object\n",
-      "Email               30 non-null object\n",
-      "Job                 30 non-null object\n",
-      "IP Address          30 non-null object\n",
-      "Language            30 non-null object\n",
-      "Purchase Price      30 non-null float64\n",
-      "dtypes: float64(1), int64(2), object(11)\n",
-      "memory usage: 3.5+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "(ecom['Job'] == \"Lawyer\").sum() # I dont' know why we would use the other solution...same goes for the previous."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -426,10 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -439,12 +424,14 @@
        "Name: AM or PM, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['AM or PM'].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -455,10 +442,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -471,12 +456,14 @@
        "Name: Job, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Job'].value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -487,10 +474,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -499,12 +484,15 @@
        "Name: Purchase Price, dtype: float64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom.loc[ecom['Lot'] == '90 WT', 'Purchase Price'] # approx 200 pico seconds faster\n",
+    "#%timeit ecom[ecom['Lot'] == \"90 WT\"]['Purchase Price']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -515,10 +503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -527,12 +513,14 @@
        "Name: Email, dtype: object"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom.loc[ecom['Credit Card'] == 4926535242672853, 'Email']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -543,37 +531,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Address             39\n",
-       "Lot                 39\n",
-       "AM or PM            39\n",
-       "Browser Info        39\n",
-       "Company             39\n",
-       "Credit Card         39\n",
-       "CC Exp Date         39\n",
-       "CC Security Code    39\n",
-       "CC Provider         39\n",
-       "Email               39\n",
-       "Job                 39\n",
-       "IP Address          39\n",
-       "Language            39\n",
-       "Purchase Price      39\n",
-       "dtype: int64"
+       "39"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "((ecom['CC Provider'] == \"American Express\") & (ecom['Purchase Price'] > 95)).sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -584,10 +558,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -595,12 +567,14 @@
        "1033"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "(ecom['CC Exp Date'].str.contains(\"/25\")).sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -611,10 +585,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -627,12 +599,14 @@
        "Name: Email, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Email'].apply(lambda x: x.split(\"@\")[1]).value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -658,9 +632,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
